--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
   font-family: 'marianne-bold';
   src: url('../fonts/marianne-bold-webfont.woff2') format('woff2'),
        url('../fonts/marianne-bold-webfont.woff') format('woff');
@@ -13,7 +13,7 @@
   font-weight: normal;
   font-style: normal;
 }
-
+*/
 html {
   background: white;
 }
